--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -23,6 +23,6 @@
 #recent-posts>.recent-post-item {
   background: rgba(255,255,255,0.8)!important;
 }
-[data-theme=dark] #recent-posts>.recent-post-item {
+[data-theme="dark"] #recent-posts>.recent-post-item {
   background: rgba(35,35,35,0.8)!important;
 }
