--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -27,6 +27,6 @@
   background: rgba(35,35,35,0.8)!important;
 }
 /* 首页磁贴背景填充 */
-li.categoryBar-list-item{
+.categoryBar-list>li.categoryBar-list-item{
   background-size: cover!important;
 }
