--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -31,5 +31,5 @@
   background-size: cover!important;
 }
 .categoryBar-list>li.categoryBar-list-item:hover{
-  transition: background-size 0.5s linear;
+  background-size: cover!important;
 }
