--- a/themes/butterfly/source/css/_page/common.styl
+++ b/themes/butterfly/source/css/_page/common.styl
@@ -6,6 +6,7 @@
 .layout
   display: flex
   flex: 1 auto
+  justify-content: center
   margin: 0 auto
   padding: 40px 15px
   max-width: 1200px
@@ -29,7 +30,7 @@
       padding: 36px 14px
 
   & > div:first-child
-    width: 74%
+    width: 65%
     transition: all .3s
 
     +maxWidth900()
