--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -7,8 +7,9 @@
     display: flex
     flex-direction: row
     align-items: center
+    justify-content: space-between
     overflow: hidden
-    height: 18em
+    height: 13em
 
     +maxWidth768()
       flex-direction: column
@@ -24,7 +25,7 @@
 
     .post_cover
       overflow: hidden
-      width: 44%
+      width: 40%
       height: 100%
 
       +maxWidth768()
