--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -22,6 +22,7 @@
     overflow: hidden
     margin-top: 20px
     padding: 20px 24px
+    background-color: rgba(255,255,255,0.7)
 
     if hexo-config('aside.mobile') == false
       +maxWidth768()
