--- a/themes/butterfly/source/css/_page/common.styl
+++ b/themes/butterfly/source/css/_page/common.styl
@@ -25,6 +25,7 @@
     @extend .cardHover
     align-self: flex-start
     padding: 50px 40px
+    width: 80%
 
     +maxWidth768()
       padding: 36px 14px
