--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -13,7 +13,7 @@
     justify-content: center
     overflow: hidden
     height: 19em
-    width: calc((100% - 40px) / 2);
+    width: calc((100% - 40px) / 2)
     margin: 0 10px
 
     +maxWidth768()
