--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -11,7 +11,6 @@
 
   // index
   &.full_page
-    height: $index_top_img_height
     background-attachment: fixed
 
     #site-info
@@ -19,6 +18,7 @@
       top: $index_site_info_top
       padding: 0 10px
       width: 100%
+      display: none
 
   #site-title,
   #site-subtitle,
@@ -62,6 +62,7 @@
     bottom: 0
     width: 100%
     cursor: pointer
+    display: none
 
     .scroll-down-effects
       position: relative
@@ -126,11 +127,12 @@
   &.nav-fixed
     #nav
       position: fixed
-      top: -60px
+      top: 0
       z-index: 91
-      background: rgba(255, 255, 255, .8)
+      background: rgba(255, 255, 255, .95)
       box-shadow: 0 5px 6px -5px alpha($grey, .6)
       transition: transform .2s ease-in-out, opacity .2s ease-in-out
+      transition: background .5s
 
       a,
       #site-name,
@@ -144,7 +146,6 @@
   &.nav-visible
     #nav
       transition: all .5s
-      transform: translate3d(0, 100%, 0)
 
     & + .layout
       & > .aside-content > .sticky_layout
