先提交一次

--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -1,7 +1,6 @@
 #page-header
   position: relative
   width: 100%
-  background-color: $light-blue
   background-position: center center
   background-size: cover
   background-repeat: no-repeat
@@ -124,7 +123,7 @@
         color: var(--font-color)
         text-shadow: none
 
-  &.nav-fixed
+  &.full_page
     #nav
       position: fixed
       top: 0
