--- a/themes/butterfly/source/css/_mode/darkmode.styl
+++ b/themes/butterfly/source/css/_mode/darkmode.styl
@@ -64,6 +64,7 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
 
     // 頭部
     #page-header
+      #nav,
       &.nav-fixed > #nav,
       &.not-top-img > #nav
         background: alpha(#121212, .8)
