--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -3,16 +3,13 @@
   background: transparent !important;
 }
 #page-header {
-  background: transparent !important;
   height: 60px;
 }
 /* 首页文章背景透明 */
-/* #recent-posts>.recent-post-item {
-  background: rgba(255,255,255,0.8)!important;
+[data-theme="dark"] #web_bg {
+  background: rgba(18,18,18);
 }
-[data-theme="dark"] #recent-posts>.recent-post-item {
-  background: rgba(35,35,35,0.8)!important;
-} */
+
 /* 首页磁贴背景填充 */
 .categoryBar-list>li.categoryBar-list-item{
   background-size: cover!important;
