--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -16,6 +16,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     !=partial('includes/sidebar', {}, {cache: true})
 
     if page.type !== '404'
+      canvas#universe
       #body-wrap(class=pageType)
         include ./header/index.pug
 
