--- a/themes/butterfly/source/css/_mode/darkmode.styl
+++ b/themes/butterfly/source/css/_mode/darkmode.styl
@@ -39,7 +39,9 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     --scrollbar-color: lighten(#121212, 5)
     --timeline-bg: lighten(#121212, 5)
 
-
+    #web_bg {
+      background: #18171d;
+    }
     #article-container
       code
         background: #2c2c2c
