--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -2,7 +2,7 @@
   width: 74%
   display: flex
   flex-flow: row wrap
-  & > .recent-post-item:not(:nth-of-type(1),:nth-of-type(2))
+  & > .recent-post-item:not(:nth-of-type(1))
     margin-top: 20px
 
   & > .recent-post-item
