--- a/themes/butterfly/layout/index.pug
+++ b/themes/butterfly/layout/index.pug
@@ -6,7 +6,7 @@ block content
     //- if theme.categoryBar.enable
     //-   .recent-post-item.category-group
     //-     !=categories_card()
-    .categoryMagnetitem!= list_categories()
+    .recent-post-item.category-group!= list_categories()
     .recent-post-item.category-group(style='width:100%;')
       each item , index in theme.categoryBar.message
         div.category-wrap(style='background: url(' +item.cover + ') center / cover')
