先提交一次

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -44,7 +44,7 @@ canvas#universe {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
-  height: auto;
+  height: 145px;
   padding: 10px;
 }
 
