--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -2,6 +2,7 @@
   width: 74%
   display: flex
   flex-flow: row wrap
+  align-content: flex-start
   & > .recent-post-item:not(:nth-of-type(1))
     margin-top: 20px
 
