--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -95,3 +95,34 @@ canvas#universe {
   transform: translateX(0);
   opacity: 1;
 }
+
+/* 滚动条 */
+/* 整个滚动条 */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 3px;
+}
+
+/* 滚动条有滑块的轨道部分 */
+::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+  border-radius: 5px;
+}
+
+/* 滚动条滑块(竖向:vertical 横向:horizontal) */
+::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background-color: #b28fce;
+  border-radius: 5px;
+}
+
+/* 滚动条滑块hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #c8adc4;
+}
+
+/* 同时有垂直和水平滚动条时交汇的部分 */
+::-webkit-scrollbar-corner {
+  display: block;
+  /* 修复交汇时出现的白块 */
+}
