--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -1,8 +1,10 @@
 #about-page
     .author-box
-        .author-img
+        .author-avatar
             img.no-lightbox(src='https://img.recreyed.ml/avatar-1.png')
-
+        .author-text
+            .title ReCreyed
+            .desrc 不可结缘 徒增伤悲
     .author-content
         .author-content-item.skills
             .card-content
@@ -13,6 +15,13 @@
                             each i in site.data.creativity
                                 - const evenNum = i.creativity_list.filter((x, index) => index % 2 === 0);
                                 - const oddNum = i.creativity_list.filter((x, index) => index % 2 === 1);
+                                each item, index in i.creativity_list
+                                    if ((index+1 <= evenNum.length) && (index+1 <= oddNum.length))
+                                        .tags-group-icon-pair
+                                            .tags-group-icon(style=`background: ${evenNum[index].color}`)
+                                                img.no-lightbox(title=evenNum[index].name, src=evenNum[index].icon)
+                                            .tags-group-icon(style=`background: ${oddNum[index].color}`)
+                                                img.no-lightbox(title=oddNum[index].name, src=oddNum[index].icon)
                                 each item, index in i.creativity_list
                                     if ((index+1 <= evenNum.length) && (index+1 <= oddNum.length))
                                         .tags-group-icon-pair
