--- a/themes/butterfly/source/css/_custom/about/about.css
+++ b/themes/butterfly/source/css/_custom/about/about.css
@@ -6,21 +6,32 @@
 }
 #about-page .author-box {
   position: relative;
+  display: flex;
 }
 
-#about-page .author-box .author-img {
-  margin: auto;
+#about-page .author-box .author-avatar {
+  /* margin: auto; */
   border-radius: 50%;
   overflow: hidden;
-  width: 180px;
-  height: 180px;
+  width: 130px;
+  height: 130px;
 }
-
-#about-page .author-box .author-img img {
-  border-radius: 50%;
-  overflow: hidden;
-  width: 180px;
-  height: 180px;
+#about-page .author-box .author-avatar img {
+  width: 100%;
+  height: 100%;
+}
+#about-page .author-box .author-text{
+  padding: 10px 20px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+}
+#about-page .author-box .author-text .title{
+  font-size: 32px;
+  font-weight: 600;
+}
+#about-page .author-box .author-text .desrc{
+  font-size: 16px;
 }
 
 .author-content {
@@ -32,7 +43,7 @@
 }
 
 .author-content-item {
-  width: 49%;
+  width: 50%;
   border-radius: 24px;
   background: #fff;
   border: 1px solid #e3e8f7;
@@ -62,4 +73,10 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 1;
+}
+
+@media screen and (max-width: 768px){
+  .author-content-item {
+    width: 100%;
+  }
 }
