--- a/themes/butterfly/layout/page.pug
+++ b/themes/butterfly/layout/page.pug
@@ -14,6 +14,8 @@ block content
         include includes/page/categories.pug
       when 'about'
         include includes/page/about.pug
+      when 'envelope'
+        include includes/page/envelope.pug
       default
         include includes/page/default-page.pug
 
