--- a/themes/butterfly/layout/includes/loading/loading.pug
+++ b/themes/butterfly/layout/includes/loading/loading.pug
@@ -1,9 +1,6 @@
-#loading-box
-  .loading-left-bg
-  .loading-right-bg
-  .spinner-box
-    .configure-border-1
-      .configure-core
-    .configure-border-2
-      .configure-core
-    .loading-word= _p('loading')
+if theme.preloader.enable
+  case theme.preloader.load_style    
+    when 'wizard'
+      include ./load_style/wizard.pug
+    default
+      include ./load_style/default.pug
