--- a/themes/butterfly/source/css/_layout/categoriescard.styl
+++ b/themes/butterfly/source/css/_layout/categoriescard.styl
@@ -8,6 +8,11 @@ if (hexo-config('categoryBar.enable')) {
         height: 141px;
         border: 10px solid #fff!important;
     }
+    [data-theme='dark'] {
+        #recent-posts>.category-group {
+            border: 10px solid #121212!important;
+        }
+    }
 
     #recent-posts>.category-group::-webkit-scrollbar {
         width: 0 !important;
