样式调整修改

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -8,22 +8,10 @@
   height: 60px;
 }
 
-/* 边框 */
-/* #recent-posts>.recent-post-item,
-#aside-content .card-widget {
-  border: 1px solid #e3e8f7;
-}
-
-[data-theme="dark"] #recent-posts>.recent-post-item,
-[data-theme="dark"] #aside-content .card-widget {
-  border: 1px solid #42444a;
-} */
-
-/* 黑夜背景 */
+/* 黑夜星空特效 */
 canvas#universe {
   display: none;
 }
-
 [data-theme="dark"] canvas#universe {
   display: block;
   position: fixed;
