--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -114,7 +114,7 @@
       position: fixed;
       top: 0;
       z-index: 91;
-      background: rgba(255, 255, 255, 0.5);
+      background: rgba(255, 255, 255, 0.6);
       backdrop-filter: saturate(180%) blur(10px);
       box-shadow: 0 5px 6px -5px alpha($grey, 0.6);
       transition: transform 0.2s ease-in-out;
@@ -124,7 +124,7 @@
         text-shadow: none;
 
         &:hover {
-          color: $light-blue;
+          color: #b28fce;
         }
       }
     }
