--- a/themes/butterfly/source/css/_mode/darkmode.styl
+++ b/themes/butterfly/source/css/_mode/darkmode.styl
@@ -39,6 +39,13 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     --scrollbar-color: lighten(#121212, 5)
     --timeline-bg: lighten(#121212, 5)
 
+    #web_bg::before
+      position: absolute
+      width: 100%
+      height: 100%
+      background-color: rgba(0,0,0,0.4)
+      content: ""
+
     #article-container
       code
         background: #2c2c2c
