新增图床管理

--- a/themes/butterfly/layout/page.pug
+++ b/themes/butterfly/layout/page.pug
@@ -16,6 +16,8 @@ block content
         include includes/page/about.pug
       when 'envelope'
         include includes/page/envelope.pug
+      when 'picmanage'
+        include includes/page/picmanage.pug
       default
         include includes/page/default-page.pug
 
