--- a/themes/butterfly/source/css/_page/picmanage.styl
+++ b/themes/butterfly/source/css/_page/picmanage.styl
@@ -1,12 +1,1 @@
-#picmanage-page {
-    position: fixed;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    iframe {
-        width: 100%;
-        height: 100%;
-    }
-}
+#picmanage-page{position:fixed;top:60px;left:0;width:100%;height:100%;iframe{width:100%;height:100%;}}
