--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -61,16 +61,7 @@
     // post
     height: 400px;
     position: relative;
-
-    &.post-bg::after {
-      content: '';
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0);
-      backdrop-filter: saturate(150%) blur(15px);
-    }
+    background-image: none!important;
 
     #post-info {
       z-index: 2;
@@ -107,10 +98,7 @@
     }
   }
 
-  &.full_page,
-  &.not-top-img,
-  &.post-bg,
-  &.not-home-page {
+  &.full_page, &.not-top-img, &.post-bg, &.not-home-page {
     #nav {
       position: fixed;
       top: 0;
@@ -134,6 +122,7 @@
   &.nav-fixed {
     #nav {
       transform: translateY(-60px);
+
       a {
         color: var(--font-color);
       }
