--- a/themes/butterfly/layout/includes/page/flink.pug
+++ b/themes/butterfly/layout/includes/page/flink.pug
@@ -53,7 +53,7 @@
                 <div class="flink-list-item">
                   <a href="${j.link}" title="${j.name}" target="_blank">
                     <div class="flink-item-icon">
-                      <img class="no-lightbox" src="${j.avatar}" onerror='this.onerror=null;this.src="${url_for(theme.error_img.flink)}"' alt="${j.name}" />
+                      <img class="no-lightbox" src="${j.avatar}" referrerPolicy="no-referrer" onerror='this.onerror=null;this.src="${url_for(theme.error_img.flink)}"' alt="${j.name}" />
                     </div>
                     <div class="flink-item-name">${j.name}</div> 
                     <div class="flink-item-desc" title="${j.descr}">${j.descr}</div>
