更换图床 netlify部署

--- a/themes/butterfly/layout/includes/page/picmanage.pug
+++ b/themes/butterfly/layout/includes/page/picmanage.pug
@@ -1,2 +1,2 @@
 #picmanage-page
-    iframe(src="https://blaze-img.vercel.app/#/home", frameborder="0") 
+    iframe(src="https://regal-fudge-07d69f.netlify.app/#/home", frameborder="0") 
