--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -1,7 +1,7 @@
 #about-page
     .author-box
         .author-avatar
-            img.no-lightbox(src='https://img.recreyed.ml/avatar-1.png')
+            img.no-lightbox(src='https://img.recreyed.tk/avatar-1.png')
         .author-text
             .title ReCreyed
             .desrc 不可结缘 徒增伤悲
