--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -1,129 +1,189 @@
-#recent-posts
-  width: 74%
-  display: flex
-  flex-flow: row wrap
-  align-content: flex-start
-  & > .recent-post-item:not(:nth-of-type(1))
-    margin-top: 20px
+#recent-posts {
+  width: 74%;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+
+  & > .recent-post-item:not(:nth-of-type(1)) {
+    margin-top: 20px;
     background: transparent;
+  }
 
-  & > .recent-post-item
-    @extend .cardHover
-    display: flex
-    flex-flow: row nowrap
-    align-items: center
-    justify-content: center
-    overflow: hidden
-    height: 16em
-    width: calc(100% - 20px)
-    margin: 0 10px
+  & > .recent-post-item {
+    @extend .cardHover;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    height: 16em;
+    width: calc(100% - 20px);
+    margin: 0 10px;
 
-    +maxWidth768()
-      flex-direction: column
-      height: auto
+    +maxWidth768() {
+      flex-direction: column;
+      height: auto;
+    }
 
-    &:hover
-      img.post_bg
-        transform: scale(1.1)
+    &:hover {
+      img.post_bg {
+        transform: scale(1.1);
+      }
+    }
 
-    &.ads-wrap
-      display: block !important
-      height: auto !important
+    &.ads-wrap {
+      display: block !important;
+      height: auto !important;
+    }
 
-    .post_cover
-      overflow: hidden
-      width: 50%
-      height: 100%
+    .post_cover {
+      overflow: hidden;
+      width: calc(50% + 87px);
+      height: 100%;
 
-      +maxWidth768()
-        width: 100%
-        height: 50%
+      +maxWidth768() {
+        width: 100%;
+        height: 50%;
+      }
 
-      img.post_bg
-        @extend .imgHover
+      img.post_bg {
+        @extend .imgHover;
+      }
 
-      &.right
-        order: 1
+      &.left {
+        margin-right: -85px;
+        clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%) ;
+      }
 
-        +maxWidth768()
-          order: 0
+      &.right {
+        order: 1;
+        margin-left: -85px;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 100%);
 
-    & >.recent-post-info
-      padding: 15px 20px
-      width: 50%
-      height: 100%
+        +maxWidth768() {
+          order: 0;
+        }
+      }
+    }
+
+    & >.recent-post-info {
+      padding: 15px 20px;
+      width: calc(50% + 87px);
+      height: 100%;
       display: flex;
       flex-flow: column nowrap;
       justify-content: center;
-      text-align: center
-      background: rgba(255,255,255,0.9)
+      text-align: center;
+      background: rgba(255, 255, 255, 0.9);
 
-      +maxWidth768()
-        padding: 10px
-        width: 100%
-        height: 50%
+      +maxWidth768() {
+        padding: 10px;
+        width: 100%;
+        height: 50%;
+      }
 
-      &.no-cover
-        width: 100%
+      &.no-cover {
+        width: 100%;
 
-        +maxWidth768()
-          padding: 10px
+        +maxWidth768() {
+          padding: 10px;
+        }
+      }
 
-      & > .article-title
-        @extend .limit-more-line
-        color: var(--text-highlight-color)
-        font-size: 1.72em
-        line-height: 1.4
-        transition: all .2s ease-in-out
-        -webkit-line-clamp: 2
+      & > .article-title {
+        @extend .limit-more-line;
+        color: var(--text-highlight-color);
+        font-size: 1.72em;
+        line-height: 1.4;
+        transition: all 0.2s ease-in-out;
+        -webkit-line-clamp: 2;
 
-        +maxWidth768()
-          font-size: 1.5em
-          display: block
-          overflow: hidden
-          text-overflow: ellipsis
-          white-space: nowrap
+        +maxWidth768() {
+          font-size: 1.5em;
+          display: block;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
 
-        &:hover
-          color: $text-hover
+        &:hover {
+          color: $text-hover;
+        }
+      }
 
-      & > .article-meta-wrap
-        margin: 6px 0
-        color: $theme-meta-color
-        font-size: 90%
+      & > .article-meta-wrap {
+        margin: 6px 0;
+        color: $theme-meta-color;
+        font-size: 90%;
 
-        & > .post-meta-date
-          cursor: default
+        & > .post-meta-date {
+          cursor: default;
+        }
 
-        .sticky
-          color: $sticky-color
+        .sticky {
+          color: $sticky-color;
+        }
 
-        i
-          margin: 0 4px 0 0
+        i {
+          margin: 0 4px 0 0;
+        }
 
-        .article-meta-label
-          if hexo-config('post_meta.page.label')
-            padding-right: 4px
-          else
-            display: none
+        .article-meta-label {
+          if (hexo-config('post_meta.page.label')) {
+            padding-right: 4px;
+          } else {
+            display: none;
+          }
+        }
 
-        .article-meta-separator
-          margin: 0 6px
+        .article-meta-separator {
+          margin: 0 6px;
+        }
 
-        .article-meta-link
-          margin: 0 4px
+        .article-meta-link {
+          margin: 0 4px;
+        }
 
-        if hexo-config('post_meta.page.date_format') == 'relative'
-          time
-            display: none
+        if (hexo-config('post_meta.page.date_format') == 'relative') {
+          time {
+            display: none;
+          }
+        }
 
-        a
-          color: $theme-meta-color
+        a {
+          color: $theme-meta-color;
 
-          &:hover
-            color: $text-hover
-            text-decoration: underline
+          &:hover {
+            color: $text-hover;
+            text-decoration: underline;
+          }
+        }
+      }
 
-      & > .content
-        @extend .limit-more-line
-        -webkit-line-clamp: 2
+      & > .content {
+        @extend .limit-more-line;
+        -webkit-line-clamp: 2;
+      }
+    }
+  }
+
+  & > .recent-post-item:has(.post_cover.left) {
+    .recent-post-info {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 100%);
+      margin-left: -85px;
+      .content{
+        padding-left: 115px;
+      }
+    }
+  }
+
+  & > .recent-post-item:has(.post_cover.right) {
+    .recent-post-info {
+      clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
+      margin-right: -85px;
+      .content{
+        padding-right: 115px;
+      }
+    }
+  }
+}
