--- a/themes/butterfly/source/css/_page/picmanage.styl
+++ b/themes/butterfly/source/css/_page/picmanage.styl
@@ -1,1 +1,16 @@
-#picmanage-page{position:fixed;top:60px;left:0;width:100%;height:100%;iframe{width:100%;height:95%;}}#footer{display:none;}
+#picmanage-page {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 60px);
+
+    iframe {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+#footer {
+    display: none;
+}
