--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -55,6 +55,7 @@
         margin-left: -85px;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 100%);
       }
+
       +maxWidth768() {
         width: 100%;
         height: 150px;
@@ -176,7 +177,16 @@
       clip-path: polygon(0 0, 100% 0, 100% 100%, 30% 100%);
       margin-left: -85px;
 
+      .article-title {
+        text-align: right;
+      }
+
+      .article-meta-wrap {
+        text-align: right;
+      }
+
       .content {
+        text-align: right;
         padding-left: 115px;
       }
     }
@@ -187,8 +197,17 @@
       clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
       margin-right: -85px;
 
+      .article-title {
+        text-align: right;
+      }
+
+      .article-meta-wrap {
+        text-align: right;
+      }
+
       .content {
-        padding-right: 115px;
+        text-align: right;
+        padding-left: 115px;
       }
     }
   }
