--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -198,15 +198,15 @@
       margin-right: -85px;
 
       .article-title {
-        text-align: right;
+        text-align: left;
       }
 
       .article-meta-wrap {
-        text-align: right;
+        text-align: left;
       }
 
       .content {
-        text-align: right;
+        text-align: left;
         padding-left: 115px;
       }
     }
