--- a/themes/butterfly/layout/includes/page/picmanage.pug
+++ b/themes/butterfly/layout/includes/page/picmanage.pug
@@ -1,3 +1,3 @@
 #picmanage-page
-    //- iframe(src="https://picbed.recreyed.tk", frameborder="0")
-    iframe(src="https://picbed.recreyed.tk", frameborder="0")
+    //- iframe(src="https://hitagi.myqnapcloud.com:3132", frameborder="0")
+    iframe(src="https://picbed.hitagi.site", frameborder="0")
