--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -3,7 +3,7 @@
         .author-avatar
             img.no-lightbox(src='https://img.hitagi.site/avatar-1.png')
         .author-text
-            .title ReCreyed
+            .title Kissshot
             .desrc 不可结缘 徒增伤悲
     .author-content
         .author-content-item.skills
