--- a/themes/butterfly/source/css/_layout/categoriescard.styl
+++ b/themes/butterfly/source/css/_layout/categoriescard.styl
@@ -19,8 +19,8 @@ if (hexo-config('categoryBar.enable')) {
     }
 
     .category-wrap {
-        width: 23%;
-        height: 120px;
+        width: 32%;
+        height: 100%;
         border-radius: 4px;
         position: relative;
         box-shadow: none;
