--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -47,7 +47,7 @@
 
       &.left {
         margin-right: -85px;
-        clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 70% 100%, 0 100%);
       }
 
       &.right {
